--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,12 @@ allprojects {
         support_library_version = "27.1.1"
         constraint_layout_version = "1.1.2"
         retrofit2_version = "2.3.0"
+        retrofit2_coroutines_adapter_version = "1.0.0"
         okhttp3_version = "3.10.0"
         gson_version = "2.8.2"
         rxjava2_version = "2.1.10"
         rxandroid_version = "2.0.2"
+        coroutines_android_version = "0.24.0"
         junit_version = "4.12"
         mockito_version = "2.8.9"
         powermock_version = "1.7.1"
